src/main/metadata/objects/Booking__c.object
<CustomObject>
    <description>To store Service Booking Information for a particular Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Booking_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Request__c</fullName>
        <label>Additional Request</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Dealer_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Dealer Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (Assigned Dealer Outlet)</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Service_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Service Advisor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (Assigned Service Advisor)</relationshipLabel>
        <relationshipName>Bookings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BookingDateTimeFrom__c</fullName>
        <label>BookingDateTimeFrom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BookingDateTimeTo__c</fullName>
        <label>BookingDateTimeTo</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booking_ID__c</fullName>
        <externalId>true</externalId>
        <label>Booking ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status__c</fullName>
        <label>Booking Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Time__c</fullName>
        <label>Booking Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Customer__c</fullName>
        <label>Comments (Customer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Dealer__c</fullName>
        <label>Comments (Dealer)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leads</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipName>Booking_Histories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'AU') ,'AU', 
IF(ISPICKVAL($User.Market__c, 'CN'), 'CN', 
IF(ISPICKVAL($User.Market__c, 'TH'), 'TH',
IF(ISPICKVAL($User.Market__c, 'JP'), 'JP', 
IF(ISPICKVAL($User.Market__c, 'KR'), 'KR','NA')))))</defaultValue>
        <label>Market discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>More_info_for_Cancellation__c</fullName>
        <label>More info for Cancellation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Channel_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Communication Channel - Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Channel_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Communication Channel - Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Channel_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred Communication Channel - SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Consultant ID</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_My_Service__c</fullName>
        <label>Selected My Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selected_Service_Center__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Selected Service Center</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bookings (Selected Service Center)</relationshipLabel>
        <relationshipName>Booking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Fuel__c</fullName>
        <label>Vehicle Fuel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Longtype__c</fullName>
        <label>Vehicle Longtype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Transmission__c</fullName>
        <label>Vehicle Transmission</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Bookings</relationshipLabel>
        <relationshipName>Bookings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WIP_Number__c</fullName>
        <label>WIP Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000000}</displayFormat>
        <label>Booking Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bookings</pluralLabel>
    <recordTypes>
        <fullName>Service_Booking</fullName>
        <active>true</active>
        <description>Service Booking Record Type</description>
        <label>Service Booking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Test_Drive</fullName>
        <active>true</active>
        <description>Test Drive Record Type</description>
        <label>Test Drive</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>